--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
         <div class="topBanner">
             <!--banner pour info sur ristourne livraison-->
-            <span>livraison gratuite</span> en boutique et à partir de <span>69€</span> via Colissimo et Relais Colis
+            <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span class="infoDelivery">69€</span> via
+            Colissimo et Relais Colis
+            </p>
         </div>
 
         <div class="secondBanner">
@@ -27,7 +29,7 @@
                         <input type="text" placeholder="RECHERCHER" name="search">
                     </form>
                 </div>
-                
+
                 <div class="mainLogo">
                     <img src="" alt="">
                 </div>
@@ -54,7 +56,6 @@
     <section class="firstImage">
         <img src="" alt="">
     </section>
-
 
 </body>
 
