--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399" crossorigin="anonymous"></script>
     <title>Reproducing NAFNAF Home page</title>
 </head>
 
@@ -25,11 +26,12 @@
             <div>
                 <!--barre de recherche-->
                 <div class="searchBar">
+                    <i class="fas fa-cloud"></i>
                     <form action="#">
                         <input type="text" placeholder="RECHERCHER" name="search">
                     </form>
                 </div>
-
+                
                 <div class="mainLogo">
                     <img src="" alt="">
                 </div>
