--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
 
     <!--Début de mon header-->
-    <header>
+    <header class="containerFlex">
         <div class="topBanner">
             <!--banner pour info sur ristourne livraison-->
-            <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span class="infoDelivery">69€</span> via
-            Colissimo et Relais Colis
+            <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span
+                    class="infoDelivery">69€</span> via
+                Colissimo et Relais Colis
             </p>
         </div>
 
@@ -26,12 +27,12 @@
             <div>
                 <!--barre de recherche-->
                 <div class="searchBar">
-                    <i class="fas fa-cloud"></i>
                     <form action="#">
+                        <span class="searchIcon"></span>
                         <input type="text" placeholder="RECHERCHER" name="search">
                     </form>
                 </div>
-                
+
                 <div class="mainLogo">
                     <img src="" alt="">
                 </div>
