--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--Début de mon header-->
     <header>
-        <div class="topBanner containerFlex2">
+        <div class="topBanner containerFlex1">
             <!--banner pour info sur ristourne livraison-->
             <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span
                     class="infoDelivery">69€</span> via
@@ -26,34 +26,40 @@
             </p>
         </div>
 
-        <div class="secondBanner containerFlex2">
+        <div class="secondBanner containerFlex1">
             <!--div contenant la barre de recherche+titre/logos-->
 
             <!--barre de recherche-->
-            <div>
-                <form action="#" class="containerFlex2 searchBar">
+            <div class="searchBar">
+                <form action="#" class="containerFlex1">
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="RECHERCHER" name="search">
                 </form>
+                <div class="animationUnderline"></div>
             </div>
-            
+
             <!--titre de la page-->
-            <div class="mainLogo containerFlex2">
-                <h1>COPY WEBPAGE NAFNAF</h1>
+            <div class="mainLogo containerFlex1">
+                <h1>WEBPAGE COPY NAFNAF</h1>
             </div>
 
             <!--petits logos pour suivre la page-->
-            <div class="smallerLogos containerFlex">EST</div>
+            <div class="smallerLogos containerFlex1">
+                <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+                <a href="#"><i class="fas fa-user-alt"></i></a>
+                <a href="#"><i class="fas fa-heart"></i></a>
+                <a href="#"><i class="fas fa-shopping-bag"></i></a>
+            </div>
         </div>
     </header>
-    
+
     <nav class="navBar">
         <!--menu-->
-        <ul>
-            <li><a href="#nouveaute"></a>nouveautés</li>
-            <li><a href="#collection">collection</a></li>
-            <li><a href="#robes"></a>robes</li>
-            <li><a href="#accessoires">accessoires</a></li>
+        <ul class="containerFlex2">
+            <li><a class="menu" href="#nouveaute">nouveautés</a></li>
+            <li><a class="menu" href="#collection">collection</a></li>
+            <li><a class="menu" href="#robes">robes</a></li>
+            <li><a class="menu" href="#accessoires">accessoires</a></li>
         </ul>
     </nav>
 
