finition of the underline animation effect

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!--barre de recherche-->
             <div class="searchBar">
-                <form action="#" class="containerFlex1">
+                <form action="#" class="containerFlex1 ">
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="RECHERCHER" name="search">
                 </form>
@@ -56,10 +56,10 @@
     <nav class="navBar">
         <!--menu-->
         <ul class="containerFlex2">
-            <li><a class="menu" href="#nouveaute">nouveautés</a></li>
-            <li><a class="menu" href="#collection">collection</a></li>
-            <li><a class="menu" href="#robes">robes</a></li>
-            <li><a class="menu" href="#accessoires">accessoires</a></li>
+            <li><a class="menu underline-hover-effect" href="#nouveaute">nouveautés</a></li>
+            <li><a class="menu underline-hover-effect " href="#collection">collection</a></li>
+            <li><a class="menu underline-hover-effect" href="#robes">robes</a></li>
+            <li><a class="menu underline-hover-effect" href="#accessoires">accessoires</a></li>
         </ul>
     </nav>
 
