--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
     </header>
 
+    <!--Début de mon menu-->
     <nav class="navBar">
         <!--menu-->
         <ul class="containerFlex2">
@@ -63,8 +64,9 @@
         </ul>
     </nav>
 
-    <section class="firstImage">
-        <img src="" alt="">
+    <!--Début de Image Banner-->
+    <section >
+        <img src="Picture/nuage.jpg" alt="clouds-and-blue-sky" title="clouds-and-blue-sky" class="firstImage">
     </section>
 
 </body>
