addition of article and divs

--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
         <img src="Picture/nuage.jpg" alt="clouds-and-blue-sky" title="clouds-and-blue-sky" class="firstImage">
     </section>
 
+    <article>
+        <div>
+            <div>
+                
+            </div>
+        </div>
+    </article>
+
 </body>
 
 </html>
