addition of lorem just to try

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
     </section>
 
     <article>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, voluptatibus. Odio pariatur quidem saepe quae a, ipsam aliquid molestias voluptas officia esse eos, quisquam repudiandae, modi aliquam hic sequi nesciunt?
         <div>
             <div>
-                
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia sed, id maxime corporis saepe ratione iusto, doloribus repellendus vero praesentium earum commodi debitis molestias facilis ea sunt illo magnam?
             </div>
         </div>
     </article>
