addtion of images and divs

--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@
     <!--Début de Image Banner-->
     <section >
         <img src="Picture/nuage.jpg" alt="clouds-and-blue-sky" title="clouds-and-blue-sky" class="firstImage">
+
+        <div>
+            <div class="secondImage">
+                <img src="Picture/womanPic1.jpg" alt="gingerWoman" title="ginger-woman">
+            </div>
+            <div class="newIn">
+                <p class="txtImageBanner">
+                    <span class="txtNew">new</span><span class="txtIn">in.</span><br>les nouveautés de la semaine.
+                </p>
+
+                <button class="imgButton">Je craque !</button>
+            </div>
+
+            <div class="thirdImage">
+                <img src="Picture/womanPic2..jpg" alt="gingerWoman2" title="ginger-woman-2">
+            </div>
+        </div>
     </section>
 
     <article>
