find another solution

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
     </nav>
 
     <!--Début de Image Banner-->
-    <section >
-        <img src="Picture/nuage.jpg" alt="clouds-and-blue-sky" title="clouds-and-blue-sky" class="firstImage">
-
+    <section class="firstImage">
         <div>
             <div class="secondImage">
                 <img src="Picture/womanPic1.jpg" alt="gingerWoman" title="ginger-woman">
@@ -87,10 +85,13 @@
     </section>
 
     <article>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, voluptatibus. Odio pariatur quidem saepe quae a, ipsam aliquid molestias voluptas officia esse eos, quisquam repudiandae, modi aliquam hic sequi nesciunt?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, voluptatibus. Odio pariatur quidem saepe quae a,
+        ipsam aliquid molestias voluptas officia esse eos, quisquam repudiandae, modi aliquam hic sequi nesciunt?
         <div>
             <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia sed, id maxime corporis saepe ratione iusto, doloribus repellendus vero praesentium earum commodi debitis molestias facilis ea sunt illo magnam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia sed, id maxime corporis
+                saepe ratione iusto, doloribus repellendus vero praesentium earum commodi debitis molestias facilis ea
+                sunt illo magnam?
             </div>
         </div>
     </article>
