--- a/index.html
+++ b/index.html
@@ -96,6 +96,45 @@
         </div>
     </article>
 
+    <footer>
+        <div class="customerService">
+            <div class="payment">
+                <i class="fas fa-credit-card"></i>
+                <p class="CSTitle">paiement sécurisé</p>
+                <p class="CSText">Carte bleue, Visa, Mastercard,<br>Paypal</p>
+            </div>
+            <div class="delivery">
+                <i class="fas fa-truck"></i>
+                <p class="CSTitle">livraison gratuite</p>
+                <p class="CSText">En boutique et dès 69€<br>en Relais Colis et Colissimo</p>
+            </div>
+            <div class="returns">
+                <i class="fas fa-box-open"></i>
+                <p class="CSTitle">retours gratuits</p>
+                <p class="CSText">Gratuit, par Relais Colis, pour toute commande livrée en<br>boutique ou en Point Relais. À la charge du client, via<br>Colissimo, pour toute commande livrée en Colissimo.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-comments"></i>
+                <p class="CSTitle">service client</p>
+                <p class="CSText">Contactez nous</p>
+            </div>
+        </div>
+        <div class="community">
+            <div class="newsletter">
+                <img src="Picture/cochon.png" alt="Winking pig">
+                <p class="CSTitle">inscrivez-vous à notre newsletter !</p>
+                <p class="communityInfo">+ de news + de mode + de bons plans...</p>
+                <input type="email" name="email" id="email" placeholder="INSCRIVEZ VOTRE ADRESSE MAIL">
+                <input type="button" value="OK">
+            </div>
+            <div class="socialMedia">
+                <p class="CSTitle">suivez nous !</p>
+                <p class="communityInfo">Rejoignez la communauté naf naf</p>
+                <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fab fa-pinterest-p"></i> <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
