skeleton of the psuedo-slider

--- a/index.html
+++ b/index.html
@@ -85,16 +85,31 @@
     </section>
 
     <article>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, voluptatibus. Odio pariatur quidem saepe quae a,
-        ipsam aliquid molestias voluptas officia esse eos, quisquam repudiandae, modi aliquam hic sequi nesciunt?
-        <div>
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia sed, id maxime corporis
-                saepe ratione iusto, doloribus repellendus vero praesentium earum commodi debitis molestias facilis ea
-                sunt illo magnam?
+        <div class="titleH2">
+            <h2>Nouveautés de la semaine.</h2>
+        </div>
+
+        <div class="pseudo_slider">
+            <div class="slider_img1">
+                <img src="Picture/habits (1).jpg" alt="" class="slider_images">
+            </div>
+
+            <div class="slider_img2">
+                <img src="Picture/habits (2).jpg" alt="" class="slider_images">
+            </div>
+
+            <div class="slider_img3">
+                <img src="Picture/habits (3).jpg" alt="" class="slider_images">
+            </div>
+
+            <div class="slider_img4">
+                <img src="Picture/habits (7).jpg" alt="" class="slider_images">
             </div>
         </div>
     </article>
+
+    <!--<i class="fas fa-chevron-right"></i> chevron-right
+        <i class="fas fa-chevron-left"></i> chevron left--->
 
     <footer>
         <div class="customerService">
@@ -111,7 +126,8 @@
             <div class="returns">
                 <i class="fas fa-box-open"></i>
                 <p class="CSTitle">retours gratuits</p>
-                <p class="CSText">Gratuit, par Relais Colis, pour toute commande livrée en<br>boutique ou en Point Relais. À la charge du client, via<br>Colissimo, pour toute commande livrée en Colissimo.</p>
+                <p class="CSText">Gratuit, par Relais Colis, pour toute commande livrée en<br>boutique ou en Point
+                    Relais. À la charge du client, via<br>Colissimo, pour toute commande livrée en Colissimo.</p>
             </div>
             <div class="service">
                 <i class="fas fa-comments"></i>
@@ -130,7 +146,8 @@
             <div class="socialMedia">
                 <p class="CSTitle">suivez nous !</p>
                 <p class="communityInfo">Rejoignez la communauté naf naf</p>
-                <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fab fa-pinterest-p"></i> <i class="fab fa-youtube"></i>
+                <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fab fa-pinterest-p"></i> <i
+                    class="fab fa-youtube"></i>
             </div>
         </div>
     </footer>
