work on the pseudo-slider

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <div class="pseudo_slider">
             <div class="slider_img1">
                 <img src="Picture/habits (1).jpg" alt="" class="slider_images">
+                <p>Jean flex</p>
             </div>
 
             <div class="slider_img2">
