next steps - adding info down pictures

--- a/index.html
+++ b/index.html
@@ -91,20 +91,35 @@
 
         <div class="pseudo_slider">
             <div class="slider_img1">
-                <img src="Picture/habits (1).jpg" alt="" class="slider_images">
-                <p>Jean flex</p>
+                <img src="Picture/habits (1).jpg" alt="Jean flex" class="slider_images">
+                <div class="infoFringues">
+                    <div>Jean flex</div>
+                    <div>34.99€</div>
+                </div>
             </div>
 
             <div class="slider_img2">
-                <img src="Picture/habits (2).jpg" alt="" class="slider_images">
+                <img src="Picture/habits (3).jpg" alt="Crop-top félin" class="slider_images">
+                <div class="infoFringues">
+                    <div>Crop-top félin</div>
+                    <div>15.99€</div>
+                </div>
             </div>
 
             <div class="slider_img3">
-                <img src="Picture/habits (3).jpg" alt="" class="slider_images">
+                <img src="Picture/habits (4).jpg" alt="crop-top empowerment" class="slider_images">
+                <div class="infoFringues">
+                    <div>Crop-dop empowerment</div>
+                    <div>10.50€</div>
+                </div>
             </div>
 
             <div class="slider_img4">
-                <img src="Picture/habits (7).jpg" alt="" class="slider_images">
+                <img src="Picture/habits (7).jpg" alt="Veste beige" class="slider_images">
+                <div class="infoFringues">
+                    <div>Veste beige</div>
+                    <div>45.99€</div>
+                </div>
             </div>
         </div>
     </article>
