--- a/index.html
+++ b/index.html
@@ -16,53 +16,58 @@
 
 <body>
 
-    <!--Début de mon header-->
-    <header>
-        <div class="topBanner containerFlex1">
-            <!--banner pour info sur ristourne livraison-->
-            <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span
-                    class="infoDelivery">69€</span> via
-                Colissimo et Relais Colis
-            </p>
-        </div>
+    <div class="sticky">
 
-        <div class="secondBanner containerFlex1">
-            <!--div contenant la barre de recherche+titre/logos-->
-
-            <!--barre de recherche-->
-            <div class="searchBar">
-                <form action="#" class="containerFlex1 ">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="RECHERCHER" name="search">
-                </form>
-                <div class="animationUnderline"></div>
+        <!--Début de mon header-->
+        <header>
+            <div class="topBanner containerFlex1">
+                <!--banner pour info sur ristourne livraison-->
+                <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span
+                        class="infoDelivery">69€</span> via
+                    Colissimo et Relais Colis
+                </p>
             </div>
 
-            <!--titre de la page-->
-            <div class="mainLogo containerFlex1">
-                <h1>WEBPAGE COPY NAFNAF</h1>
-            </div>
+            <div class="secondBanner containerFlex1">
+                <!--div contenant la barre de recherche+titre/logos-->
 
-            <!--petits logos pour suivre la page-->
-            <div class="smallerLogos containerFlex1">
-                <a href="#"><i class="fas fa-map-marker-alt"></i></a>
-                <a href="#"><i class="fas fa-user-alt"></i></a>
-                <a href="#"><i class="fas fa-heart"></i></a>
-                <a href="#"><i class="fas fa-shopping-bag"></i></a>
-            </div>
-        </div>
-    </header>
+                <!--barre de recherche-->
+                <div class="searchBar">
+                    <form action="#" class="containerFlex1 ">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="RECHERCHER" name="search">
+                    </form>
+                    <div class="animationUnderline"></div>
+                </div>
 
-    <!--Début de mon menu-->
-    <nav class="navBar">
-        <!--menu-->
-        <ul class="containerFlex2">
-            <li><a class="menu underline-hover-effect" href="#nouveaute">nouveautés</a></li>
-            <li><a class="menu underline-hover-effect " href="#collection">collection</a></li>
-            <li><a class="menu underline-hover-effect" href="#robes">robes</a></li>
-            <li><a class="menu underline-hover-effect" href="#accessoires">accessoires</a></li>
-        </ul>
-    </nav>
+                <!--titre de la page-->
+                <div class="mainLogo containerFlex1">
+                    <h1>WEBPAGE COPY NAFNAF</h1>
+                </div>
+
+                <!--petits logos pour suivre la page-->
+                <div class="smallerLogos containerFlex1">
+                    <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+                    <a href="#"><i class="fas fa-user-alt"></i></a>
+                    <a href="#"><i class="fas fa-heart"></i></a>
+                    <a href="#"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+            </div>
+        </header>
+
+        <!--Début de mon menu-->
+        <nav class="navBar">
+            <!--menu-->
+            <ul class="containerFlex2">
+                <li><a class="menu underline-hover-effect" href="#nouveaute">nouveautés</a></li>
+                <li><a class="menu underline-hover-effect " href="#collection">collection</a></li>
+                <li><a class="menu underline-hover-effect" href="#robes">robes</a></li>
+                <li><a class="menu underline-hover-effect" href="#accessoires">accessoires</a></li>
+            </ul>
+        </nav>
+
+    </div>
+    <!--Fin de mon sticky-->
 
     <!--Début de Image Banner-->
     <section class="firstImage">
