--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     <div>Jean flex</div>
                     <div>34.99€</div>
                 </div>
+                <div class="overlay"></div>
             </div>
 
             <div class="slider_img2">
@@ -109,6 +110,7 @@
                     <div>Crop-top félin</div>
                     <div>15.99€</div>
                 </div>
+                <div class="overlay"></div>
             </div>
 
             <div class="slider_img3">
@@ -117,6 +119,7 @@
                     <div>Crop-dop empowerment</div>
                     <div>10.50€</div>
                 </div>
+                <div class="overlay"></div>
             </div>
 
             <div class="slider_img4">
@@ -125,6 +128,7 @@
                     <div>Veste beige</div>
                     <div>45.99€</div>
                 </div>
+                <div class="overlay"></div>
             </div>
         </div>
     </article>
