--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                     <div>Jean flex</div>
                     <div>34.99€</div>
                 </div>
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <p>Comment whatever</p>
+                </div>
             </div>
 
             <div class="slider_img2">
@@ -110,7 +112,9 @@
                     <div>Crop-top félin</div>
                     <div>15.99€</div>
                 </div>
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <p>Comment whatever</p>
+                </div>
             </div>
 
             <div class="slider_img3">
@@ -119,7 +123,9 @@
                     <div>Crop-dop empowerment</div>
                     <div>10.50€</div>
                 </div>
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <p>Comment whatever</p>
+                </div>
             </div>
 
             <div class="slider_img4">
@@ -128,7 +134,9 @@
                     <div>Veste beige</div>
                     <div>45.99€</div>
                 </div>
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <p>Comment whatever</p>
+                </div>
             </div>
         </div>
     </article>
