work on the image banner div

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
 
     </div>
-    <!--Fin de mon sticky-->
+    <!--Fin de ma div sticky-->
 
     <!--Début de Image Banner-->
     <section class="firstImage">
@@ -76,10 +76,8 @@
                 <img src="Picture/womanPic1.jpg" alt="gingerWoman" title="ginger-woman">
             </div>
             <div class="newIn">
-                <p class="txtImageBanner">
-                    <span class="txtNew">new</span><span class="txtIn">in.</span><br>les nouveautés de la semaine.
-                </p>
-
+                <p>New <span>in.</span></p>
+                <p class="nouveaute">les nouveautés de la semaine.</p>
                 <button class="imgButton">Je craque !</button>
             </div>
 
@@ -95,6 +93,7 @@
         </div>
 
         <div class="pseudo_slider">
+
             <div class="slider_img1">
                 <img src="Picture/habits (1).jpg" alt="Jean flex" class="slider_images">
                 <div class="infoFringues">
@@ -138,13 +137,14 @@
                     <p>Comment whatever</p>
                 </div>
             </div>
+
+            <i class="fas fa-chevron-right"></i> 
+            <i class="fas fa-chevron-left"></i> 
         </div>
+
     </article>
 
-    <!--<i class="fas fa-chevron-right"></i> chevron-right
-        <i class="fas fa-chevron-left"></i> chevron left--->
-
-    <footer>
+        <footer>
         <div class="customerService">
             <div class="payment">
                 <i class="fas fa-credit-card"></i>
