continued working on footer

--- a/index.html
+++ b/index.html
@@ -121,16 +121,18 @@
         </div>
         <div class="community">
             <div class="newsletter">
-                <img src="Picture/cochon.png" alt="Winking pig">
+                <img src="Picture/cochon.png" id="cochon" alt="Winking pig">
                 <p class="CSTitle">inscrivez-vous à notre newsletter !</p>
-                <p class="communityInfo">+ de news + de mode + de bons plans...</p>
+                <span class="communityInfo">+ de news + de mode + de bons plans...</span><br>
                 <input type="email" name="email" id="email" placeholder="INSCRIVEZ VOTRE ADRESSE MAIL">
-                <input type="button" value="OK">
+                <input type="button" value="OK" id="btnOK">
             </div>
             <div class="socialMedia">
-                <p class="CSTitle">suivez nous !</p>
-                <p class="communityInfo">Rejoignez la communauté naf naf</p>
-                <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fab fa-pinterest-p"></i> <i class="fab fa-youtube"></i>
+                <span class="CSTitle">suivez nous !</span><br>
+                <span class="communityInfo">Rejoignez la communauté naf naf</span>
+                <div class="smIcons">
+                    <i class="fab fa-facebook-f"></i> <i class="fab fa-instagram"></i> <i class="fab fa-pinterest-p"></i> <i class="fab fa-youtube"></i>
+                </div>
             </div>
         </div>
     </footer>
