ajout de commentaire pour vérification

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!--Début de mon header-->
     <header>
         <div class="topBanner containerFlex1">
-            <!--banner pour info sur ristourne livraison-->
+            <!--banner pour info sur ristourne livraison--> 
+            <!--ajout d'un commentaire pour tester--> 
             <p><span class="infoDelivery">livraison gratuite</span> en boutique et à partir de <span
                     class="infoDelivery">69€</span> via
                 Colissimo et Relais Colis
