--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
 
     </div>
-    <!--Fin de ma div sticky-->
+    <!--Fin de ma div sticky :) -->
 
     <!--Début de Image Banner-->
     <section class="firstImage">
